--- a/webGame/12.15/game.html
+++ b/webGame/12.15/game.html
@@ -11,6 +11,8 @@
 	<script src="game.js"></script>
 	<script src="utools.js"></script>
 	<script src="level.js"></script>
+	<script src="scenceEnd.js"></script>
+	<script src="scence.js"></script>
 <head>
 	<meta charset="UTF-8">
 	<title>game 1</title>
