--- a/webGame/12.15/game.html
+++ b/webGame/12.15/game.html
@@ -5,14 +5,19 @@
 		border: solid 1px black;
 	}
 </style>
-	<script src="paddle.js"></script>
-	<script src="ball.js"></script>
-	<script src="brick.js"></script>
-	<script src="game.js"></script>
-	<script src="utools.js"></script>
-	<script src="level.js"></script>
-	<script src="scenceEnd.js"></script>
-	<script src="scence.js"></script>
+	<!-- 场景文件-->	
+	<script src="scence/paddle.js"></script>
+	<script src="scence/ball.js"></script>
+	<script src="scence/brick.js"></script>
+	<script src="scence/scence.js"></script>
+	<!-- 开始和结束场景 -->
+	<script src="scence/scenceEnd.js"></script>
+	<script src="scence/scenceTitle.js"></script>
+	<!-- 关卡文件 -->	
+	<script src="game/level.js"></script>
+	<!-- 游戏相关 -->
+	<script src="game/utools.js"></script>
+	<script src="game/game.js"></script>
 <head>
 	<meta charset="UTF-8">
 	<title>game 1</title>
