--- a/flightShooting/game.html
+++ b/flightShooting/game.html
@@ -3,6 +3,10 @@
 <style>
 	canvas {
 		border: solid 1px black;
+	    display:flex;/*Flex布局*/
+	    display: -webkit-flex; /* Safari */
+	    align-items:center;/*指定垂直居中*/
+		
 	}
 	td {
 		border: solid 1px black;
@@ -32,6 +36,7 @@
 	<title>game 1</title>
 </head>
 	<body>
+		<div class="main">
 		<canvas id="id_canvas" width="400" height="600"></canvas>
 		<br>
 		
